<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_web</name>
  <version>0.0.0</version>
  <description>ROS2 package for web teleop</description>
  <maintainer email="lou@polyhobbyist.com">Lou Amadio</maintainer>
  <license>BSD</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosapi</exec_depend>
  <exec_depend>python3-tornado</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>